# web3JobX402

./: .gitignore  README.md  README_CN.md
backend/rust_backend/: .env.example  Cargo.toml  x402-req-resp.md
backend/rust_backend/migrations/: 001_init_schema.sql  002_add_seal_fields.sql  003_change_access_logs_resume_id_to_varchar.sql  004_add_encryption_mode.sql  005_add_name_to_resumes.sql
backend/rust_backend/scripts/: init_db.sh  migrate_access_logs_resume_id.sh  migrate_encryption_mode.sh  migrate_seal_fields.sh  setup.sh  test_api.sh  test_get_resume_detail.sh
backend/rust_backend/src/: main.rs
backend/rust_backend/src/controllers/: access_log_controller.rs  example_controller.rs  mod.rs  resume_controller.rs  unlock_record_controller.rs  user_controller.rs
backend/rust_backend/src/dao/: access_log_dao.rs  mod.rs  resume_dao.rs  unlock_record_dao.rs  user_dao.rs
backend/rust_backend/src/entities/: access_log.rs  allowlist_member.rs  mod.rs  resume.rs  unlock_record.rs  user.rs
backend/rust_backend/src/models/: access_log.rs  config.rs  mod.rs  response.rs  resume.rs  unlock_record.rs
backend/rust_backend/src/routes/: mod.rs
backend/rust_backend/src/services/: access_log_service.rs  mod.rs  resume_service.rs  unlock_record_service.rs  user_service.rs
backend/rust_backend/src/utils/: crypto.rs  database.rs  mod.rs  validator.rs
doc/: EVENTS_DOCUMENTATION.md  RESUME_PAYMENT_SOLUTION.md  SEAL_FRONTEND_INTEGRATION.md  SEAL_INTEGRATION_SUMMARY.md  SEAL_RESUME_INTEGRATION.md  SUBSCRIPTION_RESUME_IMPLEMENTATION.md  WALRUS_SEAL_INTEGRATION.md  idea.md
doc/backend/: API_GET_RESUME_DETAIL.md  ARCHITECTURE.md  BACKEND_SEAL_UPDATE_SUMMARY.md  ENCRYPTION_MIGRATION.md  (+9 more)
(+80 files in other folders)
