[package]
name = "rust_backend"
version = "0.0.1"
edition = "2024"


[[bin]]
name = "rust_backend"
path = "src/main.rs"


[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }


sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid"] }


chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
regex = "1.0"
hex = "0.4"


aes-gcm = "0.10"

bs58 = "0.5"

# 日志
log = "0.4"
env_logger = "0.11"
